--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.18.0",
     "@mui/x-tree-view": "^7.18.0",
+    "@toolpad/core": "^0.7.0",
     "dayjs": "^1.11.13",
+    "leaflet": "^1.9.4",
     "react": "latest",
     "react-dom": "latest",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "latest",
